--- a/index.html
+++ b/index.html
@@ -1,18 +1,5 @@
 <html>
 	<body>
-		teste 
-		asd
-		saasdas
-		asd
-		asdasdasd
-		asd
-		asd
-		as
-		d
-		as
-		das
-		d
-		
-		as
+		Commit branchB
 	</body>
 </html>
